<resources>
    <string name="app_name">NBA_MyTeam_app</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_fail">"Log In incorrecto"</string>
    <string name="title">NBA MyTeam</string>
    <string name="btn_portada">Comenzar</string>
    <string name="welcome">Bienvenido/a a NBA MyTeam.</string>
    <string name="short_desc">Abre sobres y crea infinitas alineaciones con multitud de jugadores diferentes.</string>
    <string name="btn_reg">Registrarse</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="login">Log In</string>
    <string name="reg">Registro</string>
    <string name="desc_login">Inicia sesión con tus credenciales y disfruta de todas las funciones de NBA MyTeam.</string>
    <string name="nick">Nick</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="pass2">Repetir contraseña</string>
    <string name="name">Nombre completo</string>
    <string name="check_reg">Acepto el uso de mis datos personales por parte de la aplicación</string>
    <string name="img">Imagen</string>
    <string name="met_login">Método de log in:</string>
    <string name="err_login">No existe ningún usuario con tales credenciales</string>
    <string name="err_nick">Debe tener 3-20 caracteres</string>
    <string name="err_email">Debe ser formato email (45 car. máx)</string>
    <string name="err_pass">Debe tener 8-32 caracteres</string>
    <string name="err_nombre">Debe tener 40 caracteres máximo</string>
    <string name="err_nombre_alin">Es un campo obligatorio (20 carac. máximo)</string>
    <string name="err_sistema">Es un campo obligatorio</string>
    <string name="err_dif_pass">La contraseña no coincide en ambos campos</string>
    <string name="err_ckb_reg">Debe aceptar las condiciones</string>
    <string name="user_post">Usuario insertado correctamente</string>
    <string name="login_ok">Log In correcto</string>
    <string name="back_fail">No puede volver atrás. Inicie sesión para entrar en la aplicación.</string>
    <string name="err_pet">Ha ocurrido un error al realizar la operación. Por favor, inténtelo de nuevo.</string>
    <string name="err_nick_rep">Ya existe un usuario registrado con el mismo nick. Por favor, modifíquelo.</string>
    <string name="err_email_rep">Ya existe un usuario registrado con el mismo email. Por favor, modifíquelo.</string>
    <string name="shared_pref_sesion">fichero_sesion</string>
    <string name="drawer_open">Drawer abierto</string>
    <string name="drawer_close">Drawer cerrado</string>
    <string name="user_title_nav">Usuario</string>
    <string name="help_title_nav">Acerca de</string>
    <string name="ajustes">Ajustes</string>
    <string name="perfil">Perfil</string>
    <string name="info">Más información</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="pag_home">Home</string>
    <string name="pag_club">Club</string>
    <string name="pag_alineaciones">Alineaciones</string>
    <string name="pag_sobres">Sobres</string>
    <string name="titulo_busqueda">Búsqueda de jugadores</string>
    <string name="met_busqueda">Método de búsqueda:</string>
    <string name="nombre_filtro">Nombre</string>
    <string name="posicion_filtro">Posición</string>
    <string name="hint_nombre_jugador">Nombre jugador</string>
    <string name="btn_buscar">Buscar</string>
    <string name="sesion_dialog_title">Log Out</string>
    <string name="sesion_dialog_msg">¿Desea cerrar la sesión?</string>
    <string name="btn_aceptar_dialog">Aceptar</string>
    <string name="btn_cancelar_dialog">Cancelar</string>
    <string name="sobre_dialog_title">Jugador obtenido</string>
    <string name="sobre_dialog_msg">¿Guardar en el club?</string>
    <string name="nombre_dato">Nombre:</string>
    <string name="edad_dato">Edad:</string>
    <string name="nacionalidad_dato">Nacionalidad:</string>
    <string name="altura_dato">Altura(m):</string>
    <string name="peso_dato">Peso(kg):</string>
    <string name="dorsal_dato">Dorsal:</string>
    <string name="posicion_dato">Posición:</string>
    <string name="valoracion_dato">Valoración:</string>
    <string name="equipo_dato">Equipo:</string>
    <string name="alineacion_dialog_title">Formulario Alineación</string>
    <string name="alineacion_dialog_msg">Introduce los siguientes datos:</string>
    <string name="input_sistema">Sistema</string>
    <string name="error_nombre_form_alineacion">El campo "Nombre" no debe estar vacío</string>
    <string name="error_sistema_form_alineacion">El campo "Sistema" no debe estar vacío</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="del_alineacion_dialog_title">Eliminar alineación</string>
    <string name="del_alineacion_dialog_msg">¿Desea eliminar la alineación?</string>
    <string name="help_fragment_title">Información acerca de la app</string>
    <string name="jugador_dialog_title">Elección de jugador</string>
    <string name="jugador_dialog_msg">Selecciona un jugador para añadirlo</string>
    <string name="btn_jugador_dialog">Vaciar</string>
    <string name="help_fragment_description">Se encuentra en una app, <b>NBA MyTeam</b>, cuyo único fin es el entretenimiento y cuya temática está asociada a la mejor liga de basket del mundo, la <b>NBA</b>.\n\nEntre las principales opciones que presenta la aplicación, se encuentra la posibilidad de crear alineaciones con jugadores NBA (entre ellos los mejores jugadores del mundo) para, posteriormente, poder compartir estos resultados con otros usuarios.\nEl sistema de obtención de jugadores es a través de sobres limitados que generarán jugadores aleatorios dependiendo de su categoría.\n\nAdemás, también podrá consultar los datos de los jugadores y sus equipos, etc...</string>
    <string name="msg_empty_club"><b>No existen jugadores en su club.</b>\n\nPara obtener sus primeros jugadores haga click en el botón inferior.</string>
    <string name="msg_empty_alineaciones"><b>No existen alineaciones.</b>\n\nPara crear una alineación haga click en el botón de la parte inferior de la pantalla.</string>
    <string name="sobres_toast_msg">No se encuentra disponible aún la apertura de sobres</string>
    <string name="fail_toast">Ha ocurrido un error al completarse la operación</string>
    <string name="user_toast">No existe el usuario</string>
    <string name="del_alin_toast">Alineación eliminada correctamente</string>
    <string name="share_alin_toast">Alineación compartida correctamente</string>
    <string name="user_act_toast">El usuario no puede coincidir con el usuario actual</string>
    <string name="failed_share_toast">Debe completar la alineación con <b>5 jugadores</b> para poder compartirla</string>
    <string name="btn_snackbar_sobres">Ver Tiempo Restante</string>
    <string name="timer_dialog_title">Contador de tiempo</string>
    <string name="timer_dialog_msg">Tiempo transcurrido desde la última apertura:</string>
    <string name="btn_timer_dialog">Cerrar</string>
    <string name="btn_timer">Ver Tiempo</string>
    <string name="share_dialog_title">Compartir Alineación</string>
    <string name="share_dialog_msg">Especifique el usuario con el que desea compartir</string>
    <string name="nick_helper_text">Mín: 3 carac.</string>
    <string name="email_helper_text">Obligatorio</string>
    <string name="pass_helper_text">Mín: 8 carac.</string>
    <string name="nombre_helper_text">Opcional</string>
    <string name="nombre_alin_helper_text">Obligatorio</string>
    <string name="sistema_alin_helper_text">Obligatorio</string>
    <string name="propietario_dato_alin">Propietario</string>
    <string name="nombre_dato_alin">Nombre (F/NF)</string>
    <string name="msg_finalizada">F</string>
    <string name="msg_no_finalizada">NF</string>
    <string name="home_header">Páginas de la aplicación:</string>
    <string name="card_time_info">Tiempo necesario sobres (cards):</string>
    <string name="bronze_card_time">Bronze: 8h</string>
    <string name="silver_card_time">Silver: 16h</string>
    <string name="gold_card_time">Gold: 24h</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>