<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.RegistroFragment"
    android:padding="25dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tev_title_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/passion_one"
        android:text="@string/reg"
        android:textSize="40dp"
        android:layout_marginBottom="25dp">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nick_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick"
        android:layout_marginBottom="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperTextEnabled="true"
        app:helperText="@string/nick_helper_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/identity"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nick_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="45"
        app:helperTextEnabled="true"
        app:helperText="@string/email_helper_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/email"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginBottom="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:helperTextEnabled="true"
        app:helperText="@string/pass_helper_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/pass"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass2_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass2"
        android:layout_marginBottom="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:helperTextEnabled="true"
        app:helperText="@string/pass_helper_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/pass"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass2_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nombre_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:helperTextEnabled="true"
        app:helperText="@string/nombre_helper_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/user"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nombre_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <!--
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_img_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/img"
        app:helperTextEnabled="true"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    </com.google.android.material.textfield.TextInputLayout>
    -->

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/ckb_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_reg"
        android:layout_marginBottom="20dp">
    </com.google.android.material.checkbox.MaterialCheckBox>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_reg"
        app:icon="@drawable/register"
        style="@style/Widget.MaterialComponents.Button">
    </com.google.android.material.button.MaterialButton>

</LinearLayout>