<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".fragments.FormLogInFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tev_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/passion_one"
        android:text="@string/login"
        android:textSize="40dp"
        android:layout_marginBottom="25dp">
    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/met_login"
        android:textSize="@dimen/standard_text"
        android:layout_marginBottom="5dp">
    </com.google.android.material.textview.MaterialTextView>

    <RadioGroup
        android:id="@+id/rgp_met_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@id/rbt_nick"
        android:layout_marginBottom="20dp">
        <RadioButton
            android:id="@+id/rbt_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick"
            android:buttonTint="@color/medium_purple"
            android:paddingRight="15dp"
            style="@style/RadioButtonTheme">
        </RadioButton>
        <RadioButton
            android:id="@+id/rbt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:buttonTint="@color/medium_purple"
            style="@style/RadioButtonTheme">
        </RadioButton>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nick_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick"
        android:layout_marginBottom="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperTextEnabled="true"
        app:helperText="@string/nick_helper_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/identity"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nick_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:enabled="false"
        android:layout_marginBottom="15dp"
        app:counterEnabled="true"
        app:counterMaxLength="45"
        app:helperTextEnabled="true"
        app:helperText="@string/email_helper_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/email"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pass_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginBottom="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:helperTextEnabled="true"
        app:helperText="@string/pass_helper_text"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/pass"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/btn_login"
        android:layout_gravity="center_horizontal">
    </com.google.android.material.button.MaterialButton>

</LinearLayout>