<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".fragments.MenuLogFragment">

    <LinearLayout
        android:id="@+id/lin_titulo_menu_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">
        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/logo_app"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"></ImageView>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/title"
            android:textSize="@dimen/h1"
            android:fontFamily="@font/passion_one"></com.google.android.material.textview.MaterialTextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/lin_titulo_menu_log"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome"
            android:textSize="@dimen/h2"
            android:textStyle="bold"
            android:layout_marginBottom="5dp">
        </com.google.android.material.textview.MaterialTextView>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tev_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/short_desc"
            android:textSize="@dimen/standard_text"
            android:textAlignment="center">
        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reg_menu_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_reg">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_menu_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:backgroundTint="@color/dark_gray">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</RelativeLayout>