<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tev_contador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp">
        </com.google.android.material.textview.MaterialTextView>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_time_info"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp">
        </com.google.android.material.textview.MaterialTextView>
        <LinearLayout
            android:id="@+id/lin_times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/bronze_card_time">
            </com.google.android.material.textview.MaterialTextView>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/silver_card_time">
            </com.google.android.material.textview.MaterialTextView>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/gold_card_time">
            </com.google.android.material.textview.MaterialTextView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>