<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <RadioGroup
        android:id="@+id/rad_grp_busqueda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:checkedButton="@+id/rad_btn_nick">
        <RadioButton
            android:id="@+id/rad_btn_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick"
            android:textSize="14dp"
            android:paddingRight="15dp"
            android:buttonTint="@color/medium_purple"
            style="@style/RadioButtonTheme">
        </RadioButton>
        <RadioButton
            android:id="@+id/rad_btn_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14dp"
            android:buttonTint="@color/medium_purple"
            style="@style/RadioButtonTheme">
        </RadioButton>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_nick_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nick"
        android:layout_marginBottom="6dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:helperTextEnabled="true"
        app:helperText="@string/nick_helper_text"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nick_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:enabled="false"
        app:counterEnabled="true"
        app:counterMaxLength="45"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>